{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 615,
  "lineage": "e84fddd9-f619-9aae-e17d-ae6136159fb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:security-group/sg-030bf5c79e0c47678",
            "description": "Consente accesso da EKS a DocumentDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030bf5c79e0c47678",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso da security group dei nodi EKS",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "weather-scanner-docdb-sg",
            "name_prefix": "",
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "FreeTier",
              "Name": "weather-scanner-docdb-sg"
            },
            "tags_all": {
              "Environment": "FreeTier",
              "Name": "weather-scanner-docdb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:loadbalancer/net/weather-scanner-nlb/2161cf7646e2823c",
            "arn_suffix": "net/weather-scanner-nlb/2161cf7646e2823c",
            "dns_name": "weather-scanner-nlb-2161cf7646e2823c.elb.eu-west-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:loadbalancer/net/weather-scanner-nlb/2161cf7646e2823c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "weather-scanner-nlb",
            "region": "eu-west-1",
            "security_groups": [
              "sg-01784f657754624c1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01df2e321b3bdf15a"
              },
              {
                "subnet_id": "subnet-085e5ebf47f4d9e1b"
              }
            ],
            "subnets": [
              "subnet-01df2e321b3bdf15a",
              "subnet-085e5ebf47f4d9e1b"
            ],
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0cb15612c1f91920b",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:loadbalancer/net/weather-scanner-nlb/2161cf7646e2823c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_eu",
            "module.nlb.aws_security_group.this",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": "ex-tcp-udp",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:listener/net/weather-scanner-nlb/2161cf7646e2823c/b64a9200ca3b096e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:targetgroup/tf-20250719124259636200000003/c97d957cede8887f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:listener/net/weather-scanner-nlb/2161cf7646e2823c/b64a9200ca3b096e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:loadbalancer/net/weather-scanner-nlb/2161cf7646e2823c",
            "mutual_authentication": [],
            "port": 27017,
            "protocol": "TCP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_docdb_cluster.docdb",
            "aws_docdb_cluster_instance.default",
            "aws_docdb_subnet_group.weather_scanner_docdb_subnet_group",
            "aws_security_group.docdb_sg",
            "data.aws_availability_zones.available_eu",
            "data.dns_a_record_set.docdb_dynamic_ip",
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.this",
            "module.nlb.aws_security_group.this",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": "ex-target",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:targetgroup/tf-20250719124259636200000003/c97d957cede8887f",
            "arn_suffix": "targetgroup/tf-20250719124259636200000003/c97d957cede8887f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:targetgroup/tf-20250719124259636200000003/c97d957cede8887f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:787738647213:loadbalancer/net/weather-scanner-nlb/2161cf7646e2823c"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250719124259636200000003",
            "name_prefix": "tf-",
            "port": 27017,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_docdb_cluster.docdb",
            "aws_docdb_cluster_instance.default",
            "aws_docdb_subnet_group.weather_scanner_docdb_subnet_group",
            "aws_security_group.docdb_sg",
            "data.aws_availability_zones.available_eu",
            "data.dns_a_record_set.docdb_dynamic_ip",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": "ex-target",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:targetgroup/tf-20250719124259636200000003/c97d957cede8887f-20250719124301387500000004",
            "port": 27017,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:787738647213:targetgroup/tf-20250719124259636200000003/c97d957cede8887f",
            "target_id": "10.0.0.35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_docdb_cluster.docdb",
            "aws_docdb_cluster_instance.default",
            "aws_docdb_subnet_group.weather_scanner_docdb_subnet_group",
            "aws_security_group.docdb_sg",
            "data.aws_availability_zones.available_eu",
            "data.dns_a_record_set.docdb_dynamic_ip",
            "module.nlb.aws_lambda_permission.this",
            "module.nlb.aws_lb_target_group.this",
            "module.nlb.data.aws_partition.current",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:security-group/sg-01784f657754624c1",
            "description": "Security group for weather-scanner-nlb network load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01784f657754624c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB traffic",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "weather-scanner-nlb-20250719123839368700000001",
            "name_prefix": "weather-scanner-nlb-",
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:security-group-rule/sgr-01685577fb8522290",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01685577fb8522290",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01784f657754624c1",
            "security_group_rule_id": "sgr-01685577fb8522290",
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc_docdb.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": "mongo_traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:security-group-rule/sgr-0ed7d3c7ff07aeb61",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "MongoDB traffic",
            "from_port": 27017,
            "id": "sgr-0ed7d3c7ff07aeb61",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01784f657754624c1",
            "security_group_rule_id": "sgr-0ed7d3c7ff07aeb61",
            "tags": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "terraform-aws-modules": "alb"
            },
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc_docdb.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:network-acl/acl-08713e018a9d978fa",
            "default_network_acl_id": "acl-08713e018a9d978fa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08713e018a9d978fa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-01df2e321b3bdf15a",
              "subnet-085e5ebf47f4d9e1b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:route-table/rtb-01c0e9588acc81147",
            "default_route_table_id": "rtb-01c0e9588acc81147",
            "id": "rtb-01c0e9588acc81147",
            "owner_id": "787738647213",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:security-group/sg-0b7cc17e70e0dc888",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b7cc17e70e0dc888",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:internet-gateway/igw-06a05fbf19f73796c",
            "id": "igw-06a05fbf19f73796c",
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a05fbf19f73796c",
            "id": "r-rtb-0af81d31e3e8125cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0af81d31e3e8125cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_internet_gateway.this",
            "module.vpc_docdb.aws_route_table.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:route-table/rtb-0af81d31e3e8125cd",
            "id": "rtb-0af81d31e3e8125cd",
            "owner_id": "787738647213",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a05fbf19f73796c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b79654a274188ee1",
            "region": "eu-west-1",
            "route_table_id": "rtb-0af81d31e3e8125cd",
            "subnet_id": "subnet-01df2e321b3bdf15a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_eu",
            "module.vpc_docdb.aws_route_table.public",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0010ff8c5d59ef201",
            "region": "eu-west-1",
            "route_table_id": "rtb-0af81d31e3e8125cd",
            "subnet_id": "subnet-085e5ebf47f4d9e1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_eu",
            "module.vpc_docdb.aws_route_table.public",
            "module.vpc_docdb.aws_subnet.public",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:subnet/subnet-01df2e321b3bdf15a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01df2e321b3bdf15a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787738647213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "docdb-public-subnet-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "docdb-public-subnet-a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_eu",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:subnet/subnet-085e5ebf47f4d9e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085e5ebf47f4d9e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787738647213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "docdb-public-subnet-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "docdb-public-subnet-b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb15612c1f91920b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_eu",
            "module.vpc_docdb.aws_vpc.this",
            "module.vpc_docdb.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_docdb",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].anto11200",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:787738647213:vpc/vpc-0cb15612c1f91920b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08713e018a9d978fa",
            "default_route_table_id": "rtb-01c0e9588acc81147",
            "default_security_group_id": "sg-0b7cc17e70e0dc888",
            "dhcp_options_id": "dopt-0175c125b1404a5da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb15612c1f91920b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c0e9588acc81147",
            "owner_id": "787738647213",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "weather-scanner-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}